CSS fixes, high contrast done

--- a/src/components/DocumentSearch/DocumentSearch.less
+++ b/src/components/DocumentSearch/DocumentSearch.less
@@ -1,11 +1,14 @@
 .dokumentsok {
 
-  .dokumentsok__skjema {
+  &__form {
     display: flex;
     flex-direction: row;
     align-items: flex-end;
+    &.feil {
+      align-items: center !important;
+    }
 
-    .dokumentsok__input {
+    &__input {
       flex: 2;
       margin-right: 1rem;
     }
