--- a/src/components/TopContainer/TopContainer.less
+++ b/src/components/TopContainer/TopContainer.less
@@ -10,6 +10,7 @@ body {
     flex: 1 0 auto;
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
   }
 
   .highContrast {
